--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -31,10 +31,10 @@
                         </div>
                       
                         <div class="item item-input">
-                            <input type="text" placeholder="Email Id" type=email ng-model="profile.shopprofile[0].shopemail" value="">
+                            <input type="text" placeholder="Email Id" type=email ng-model="profile.shopemail" value="">
                         </div>
                         <div class="item item-input">
-                            <input type="text" placeholder="Website" type=email ng-model="profile.shopprofile[0].website" value="">
+                            <input type="text" placeholder="Website" type=email ng-model="profile.website" value="">
                         </div>
                         <div class="item item-input item-text-wrap header">
                             <h2>Shops Photos</h2>
