--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -1,19 +1,19 @@
 <ion-view view-title="Transaction">
     <ion-content class="">
         <div class="button-bar bar-royal transbtn">
-            <div class="button" ng-class="purchased" ng-click="purchase();">
+            <div class="button" ng-class="purchased" ng-click="changepurchase();">
                 Purchased
             </div>
-            <div class="button" ng-class="sale" ng-click="sale();">
+            <div class="button" ng-class="sale" ng-click="chnagesale();">
                 Sales
             </div>
-            <div class="button" ng-class="admin" ng-click="adm();">
+            <div class="button" ng-class="admin" ng-click="chnageadmin();">
                 Admin
             </div>
         </div>
         <div class="padding">
             <div class="bold-list" ng-if="purchased=='bold'">
-                <div class="incard transcard">
+                <div class="incard transcard" ng-repeat="tr in t.purchased">
                     <div class="list">
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
@@ -24,13 +24,14 @@
                                 </div>
                                 <div class="col-75">
                                     <div class="sell-cont trans">
-                                        <h2>{{trans.shopprofile[0].shopname}}</h2>
-                                        <p>Amount: {{trans.shopprofile[0].amount}}</p>
-                                        <p>Date:</p>
+                                        <h2>{{tr.shopname}}</h2>
+                                        <p>Amount: {{tr.amount}}</p>
+                                        <p>Date: {{tr.date}}</p>
                                     </div>
                                 </div>
                             </div>
                         </ion-item>
+<!--
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
                                 <div class="col-25">
@@ -47,6 +48,8 @@
                                 </div>
                             </div>
                         </ion-item>
+-->
+<!--
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
                                 <div class="col-25">
@@ -63,12 +66,13 @@
                                 </div>
                             </div>
                         </ion-item>
+-->
                     </div>
                 </div>
             </div>
 
             <div class="bold-list" ng-if="sale=='bold'">
-                <div class="incard transcard">
+                <div class="incard transcard" ng-repeat="tr in t.sales">
                     <div class="list">
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
@@ -79,13 +83,14 @@
                                 </div>
                                 <div class="col-75">
                                     <div class="sell-cont trans">
-                                        <h2>Wohlig Technology</h2>
-                                        <p>Amount: Rs.20,000</p>
-                                        <p>Date: 10th Mar 2015</p>
+                                        <h2>{{tr.shopname}}</h2>
+                                        <p>Amount: {{tr.amount}}</p>
+                                        <p>Date: {{tr.date}}</p>
                                     </div>
                                 </div>
                             </div>
                         </ion-item>
+<!--
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
                                 <div class="col-25">
@@ -102,6 +107,8 @@
                                 </div>
                             </div>
                         </ion-item>
+-->
+<!--
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
                                 <div class="col-25">
@@ -118,6 +125,7 @@
                                 </div>
                             </div>
                         </ion-item>
+-->
                     </div>
                 </div>
             </div>
@@ -150,7 +158,7 @@
     </div>
 </div>
 -->
-                <div class="incard">
+                <div class="incard" ng-repeat="tr in t.admin">
                     <ion-list class="lesspadding disable-user-behavior">
                         <div class="list amt-add">
                             <ion-item class="headed item">
@@ -162,12 +170,13 @@
                             <ion-item href="#/app/shop" class="item item-complex">
                                 <a class="item-content">
                                     <div class="row">
-                                        <div class="col">Rs 60,000</div>
-                                        <div class="col">10th Mar 2015
+                                        <div class="col">{{tr.amount}}</div>
+                                        <div class="col">{{tr.date}}
                                         </div>
                                     </div>
                                 </a>
                             </ion-item>
+<!--
                             <ion-item href="#/app/shop" class="item item-complex">
                                 <a class="item-content">
                                     <div class="row">
@@ -177,6 +186,8 @@
                                     </div>
                                 </a>
                             </ion-item>
+-->
+<!--
                             <ion-item href="#/app/shop" class="item item-complex">
                                 <a class="item-content">
                                     <div class="row">
@@ -186,6 +197,7 @@
                                     </div>
                                 </a>
                             </ion-item>
+-->
                         </div>
                     </ion-list>
                 </div>
