--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,8 +2,8 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="profile-img">
-                <img src="img/applelogo.jpg">
-                <h3>Apple Store</h3>
+                <img ng-src="{{profile.shoplogo}}">
+                <h3>{{profile.shopname}}</h3>
             </div>
             <div class="list profile-cont">
                 <ion-item class="item-left">
