--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -5,7 +5,7 @@
                 <form ng-submit="">
                     <div class="list">
                         <div class="profile-img">
-                            <img src="img/applelogo.jpg">
+                            <img src="{{profile.shoplogo}}">
                             <div class="holder">Edit</div>
                         </div>
                         <div class="item item-input">
