--- a/templates/menu.html
+++ b/templates/menu.html
@@ -39,7 +39,7 @@
                 <ion-item nav-clear menu-close href="#/app/faq">
                     <span>FAQ</span>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/welcome" ng-click="out();">
+                <ion-item nav-clear menu-close href="#/login">
                     <span>Logout</span>
                 </ion-item>
                 </div>
