--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="profile-img">
-                <img ng-src="{{profile.shoplogo}}">
+                <img ng-src="{{profile.shoplogo|serverimage}}">
                 <h3>{{profile.shopname}}</h3>
             </div>
             <div class="list profile-cont">
@@ -71,7 +71,7 @@
                 <div class="item item-input item-text-wrap itemproducts" >
                     <div class="input-div" ng-repeat="p in pic">
                         <div class="img-profile">
-                            <img ng-src="{{p.photo}}">
+                            <img ng-src="{{p.photo|serverimage}}">
                         </div>
                     </div>                 
                 </div>
@@ -81,26 +81,10 @@
                 <div class="item item-input item-text-wrap itemproducts">
                     <div class="input-div" ng-repeat="i in image">
                         <div class="img-profile">
-                        <img ng-src="{{i.photo}}">
+                        <img ng-src="{{i.photo|serverimage}}">
                         </div>
                     </div>
-<!--
-                    <div class="input-div">
-                        <div class="img-profile">
-                            <img src="img/add.png">
-                        </div>
-                    </div> 
-                       <div class="input-div">
-                        <div class="img-profile">
-                            <img src="img/add.png">
-                        </div>
-                    </div>
-                    <div class="input-div">
-                        <div class="img-profile">
-                            <img src="img/add.png">
-                        </div>
-                    </div>
--->
+
                 </div>
 
 
