--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -7,17 +7,25 @@
     </ion-header-bar>
     <ion-content class="padding">
         <div class="incard">
-            <form ng-submit="doLogin()">
+            <form >
                 <div class="list">
+                   
                     <label class="item item-input">
-                        <span class="input-label">Purchase Limit:</span> {{profile.shopprofile[0].salesbalance}}
+                        <span class="input-label">Sales Limit of Shop:</span> {{profile.salesbalance}}
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">My Purchase Limit:</span> {{userpurchasebalance}}
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
-                        <input type="text" maxlength="10" ng-model="amount">
+                        <input type="number" maxlength="10" ng-model="amount">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Reason:</span>
+                        <input type="text" maxlength="200" ng-model="reason">
                     </label>
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced" type="submit" ng-click="sendamt(amount);">Request</button>
+                        <button class="button button-block button-balanced"  ng-click="sendamt(amount,reason);">Request</button>
                     </div>
                 </div>
             </form>
