--- a/templates/selling.html
+++ b/templates/selling.html
@@ -14,11 +14,14 @@
                                 <h2>{{r.shopname}}</h2>
                                 <p>Amount: {{r.amount}}</p>
 
-                                <button class="button button-small button-outline button-balanced" ng-click="accept(r);">
+
+                                <textarea name="" id="" style="width:100%;font-size:13px;border: 1px solid #ccc;margin: 10px 0;padding: 4px;" ng-model="reason" rows="3" placeholder="Enter your reason"></textarea>
+
+                                <button class="button button-small button-outline button-balanced" ng-click="accept(r,reason);">
                                     Accept
                                 </button>
 
-                                <button class="button button-small button-outline button-assertive" ng-click=" decline(r);">
+                                <button class="button button-small button-outline button-assertive" ng-click="decline(r,reason);">
                                     Decline
                                 </button>
                             </div>
