--- a/templates/selling.html
+++ b/templates/selling.html
@@ -6,7 +6,7 @@
                     <div class="row">
                         <div class="col-25">
                             <div class="sell-img">
-                                <img src="img/logo.png">
+                                <img src="{{r.shoplogo|serverimage}}">
                             </div>
                         </div>
                         <div class="col-75" ng->
