--- a/templates/image-shop1.html
+++ b/templates/image-shop1.html
@@ -1,11 +1,12 @@
 <div class="modal image-modal transparent" ng-click="closeModals()">
     <div class="modal image-modal transparent" ng-click="closeModals()">
         <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
-            <ion-slide ng-repeat="i in img">
+            <ion-slide ng-repeat="i in image">
                 <img ng-src="{{i.photo}}" class="fullscreen-image" />
                 <!--                <p class="info">{{oImage.msg}}</p>-->
             </ion-slide>
         </ion-slide-box>
     </div>
 </div>
+ 
  
