--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -19,7 +19,7 @@
                             <div class="row">
                                 <div class="col-25">
                                     <div class="sell-img">
-                                        <img src="img/logo.png">
+                                        <img src="{{tr.shoplogo|serverimage}}">
                                     </div>
                                 </div>
                                 <div class="col-75">
@@ -34,35 +34,7 @@
 <!--
                         <ion-item class="item item-thumbnail-left">
                             <div class="row">
-                                <div class="col-25">
-                                    <div class="sell-img">
-                                        <img src="img/logo.png">
-                                    </div>
-                                </div>
-                                <div class="col-75">
-                                    <div class="sell-cont trans">
-                                        <h2>Wohlig Technology</h2>
-                                        <p>Amount: Rs.20,000</p>
-                                        <p>Date:</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </ion-item>
--->
-<!--
-                        <ion-item class="item item-thumbnail-left">
-                            <div class="row">
-                                <div class="col-25">
-                                    <div class="sell-img">
-                                        <img src="img/logo.png">
-                                    </div>
-                                </div>
-                                <div class="col-75">
-                                    <div class="sell-cont trans">
-                                        <h2>Wohlig Technology</h2>
-                                        <p>Amount: Rs.20,000</p>
-                                        <p>Date:</p>
-                                    </div>
+                                <div 
                                 </div>
                             </div>
                         </ion-item>
@@ -78,7 +50,7 @@
                             <div class="row">
                                 <div class="col-25">
                                     <div class="sell-img">
-                                        <img src="img/logo.png">
+                                        <img src="{{tr.shoplogo|serverimage}}">
                                     </div>
                                 </div>
                                 <div class="col-75">
