--- a/templates/image-shop.html
+++ b/templates/image-shop.html
@@ -2,7 +2,7 @@
     <div class="modal image-modal transparent" ng-click="closeModals()">
         <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
             <ion-slide ng-repeat="i in img">
-                <img ng-src="{{i.photo}}" class="fullscreen-image" />
+                <img ng-src="{{i.photo|serverimage}}" class="fullscreen-image" />
                 <!--                <p class="info">{{oImage.msg}}</p>-->
             </ion-slide>
         </ion-slide-box>
