--- a/templates/image-modal1.html
+++ b/templates/image-modal1.html
@@ -1,8 +1,8 @@
 <div class="modal image-modal transparent" ng-click="closeModal()">
     <div class="modal image-modal transparent" ng-click="closeModal()">
         <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
-            <ion-slide ng-repeat="p in pic">
-                <img ng-src="{{p.photo}}" class="fullscreen-image" />
+            <ion-slide ng-repeat="p in image">
+                <img ng-src="{{p.photo|serverimage}}" class="fullscreen-image" />
                 <!--                <p class="info">{{oImage.msg}}</p>-->
             </ion-slide>
         </ion-slide-box>
