--- a/templates/shop.html
+++ b/templates/shop.html
@@ -63,6 +63,9 @@
                     {{profile.website}}
                 </div>
             </ion-item>
+            <div class="item item-input item-text-wrap header">
+                    <h2>Shops Photos</h2>
+                </div>
             <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="s in shoppic">
                     <button class="button" ng-click="openpswd();"><img ng-src="{{s.photo|serverimage}}">
