--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Search Result" class="bar-royal">
-    <ion-content class="padding">
+    <ion-content class="padding searcher">
 
         <div class="incard pad-btm" ng-if="recall.area.name || recall.category.name">
             <ion-list class="lesspadding">
@@ -36,8 +36,8 @@
                 </ion-item>
                 <ion-item href="#/app/shop/{{shop.id}}" ng-click="shopclick(shop);" ng-repeat="shop in shops ">
                     <div class="row">
-                        <div class="col">{{shop.name}}</div>
-                        <div class="col"><span class="balanced amount">{{shop.sellbalance}}</span>
+                        <div class="col prename">{{shop.name}}</div>
+                        <div class="col"><span class="balanced amount">Rs.{{shop.sellbalance}}</span>
                         </div>
                     </div>
                 </ion-item>
