--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Shop">
-    <ion-content>
+    <ion-content class="has-footer">
         <div class="incard card-shop">
             <ion-list class="lesshopadding product-cont">
                 <ion-item class="product">
                     <h2>{{profile.shopname}}</h2>
                     <div class="pull-right balanced amount">
-                       {{profile.salesbalance}}
+                       Rs.{{profile.salesbalance}}
                     </div>
 
                 </ion-item>
