--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -8,23 +8,31 @@
                             <img src="{{profile.shoplogo|serverimage}}">
                             <div class="holder">Edit</div>
                         </div>
-                        <div class="item item-input">
+                        <div class="item item-input text-capitalize">
                             <input type="text" placeholder="Name" ng-model="profile.shopname">
                         </div>
-                        <div class="item item-input">
-                             <select ng-model="a">
-                        <option ng-repeat="a in areas" value="{{a.id}}">{{a.name}}</option>
-                        </select>
+
+                        <div class="item item-input item-select">
+                            <div class="input-label different">
+                                Area
+                            </div>
+                            <select ng-model="a">
+                                <option ng-repeat="a in areas" value="{{a.id}}">{{a.name}}</option>
+                            </select>
                         </div>
-                        <div class="item item-input">
-                        <select ng-model="c">
-                        <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
-                        </select>                           
+                        <div class="item item-input item-select">
+                            <div class="input-label different">
+                                Category
+                            </div>
+                            <select ng-model="c">
+                                <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
+                            </select>
                         </div>
-                        <div class="item item-input">
+
+                        <div class="item item-input text-capitalize">
                             <textarea placeholder="Address" ng-model="profile.address" value=""></textarea>
                         </div>
-                        <div class="item item-input">
+                        <div class="item item-input text-capitalize">
                             <textarea placeholder="Description" ng-model="profile.description" value=""></textarea>
                         </div>
                         <div class="item item-input">
@@ -33,7 +41,7 @@
                         <div class="item item-input">
                             <input type="text" placeholder="Landline No." ng-model="profile.shopcontact2" value="">
                         </div>
-                      
+
                         <div class="item item-input">
                             <input type="text" placeholder="Email Id" type=email ng-model="profile.shopemail" value="">
                         </div>
@@ -88,7 +96,7 @@
                             </div>
                         </div>
                         <div class="padding-horizontal btn-rest">
-                            <button class="button button-block button-balanced" type="submit" ng-click="profileupdate(profile);updatecat(c);updatearea(a);">Save</button>
+                            <button class="button button-block button-balanced" type="submit" ng-click="profileupdate(profile);updatecat(c);updatearea(a);">Update</button>
                         </div>
                     </div>
                 </form>
