--- a/templates/selling.html
+++ b/templates/selling.html
@@ -12,18 +12,14 @@
                         <div class="col-75" ng->
                             <div class="sell-cont">
                                 <h2>{{r.shopname}}</h2>
+                                
                                 <p>Amount: {{r.amount}}</p>
 
+                                <textarea style="width:100%;font-size:13px;border: 1px solid #ccc;margin: 10px 0;padding: 4px;" ng-model="reason" rows="3" placeholder="Enter your reason"></textarea>
 
-                                <textarea name="" id="" style="width:100%;font-size:13px;border: 1px solid #ccc;margin: 10px 0;padding: 4px;" ng-model="reason" rows="3" placeholder="Enter your reason"></textarea>
+                                <button class="button button-small button-outline button-balanced" ng-click="accept(r,reason);">Accept</button>
 
-                                <button class="button button-small button-outline button-balanced" ng-click="accept(r,reason);">
-                                    Accept
-                                </button>
-
-                                <button class="button button-small button-outline button-assertive" ng-click="decline(r,reason);">
-                                    Decline
-                                </button>
+                                <button class="button button-small button-outline button-assertive" ng-click="decline(r,reason);">Decline</button>
                             </div>
                         </div>
                 </ion-item>
