--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ button.btn-smalls {
 .welcome-img img {
     width: 90%;
 }
-.incard .item+.item {
+.searcher .incard .item+.item {
     border-top: 1px solid #ddd;
 }
 .incard .item {
